@@ -1,6 +1,8 @@
 New in SVN (will be 0.11)
 -------------------------
 
+* Support for Dinu Gherman's svglib. If both svglib and uniconvertor are available,
+  svglib is preferred (for SVG, of course). Patch originally by rute.
 * Issue 109: Separate styles for each kind of admonition
 * For Issue 109: missing styles are not a fatal error
 * Issue 117: TOCs with more than 6 levels now supported (raised limit to 9, which 
